--- a/index.html
+++ b/index.html
@@ -146,6 +146,66 @@
 								<p>John Deo</p>
 							</td>
 						</tr>
+						<tr>
+							<td>10.00am - 12.00am</td>
+							<td></td>
+							<td>
+								<p>Power Lifting</p>
+								<p>James Alien</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Cardio</p>
+								<p>John Deo</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Crossfit</p>
+								<p>Adam Phillips</p>
+							</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>5.00pm - 7.00am</td>
+							<td>
+								<p>Crossfit</p>
+								<p>Adam Phillips</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Power Lifting</p>
+								<p>James Alien</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Cardio</p>
+								<p>John Deo</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Crossfit</p>
+								<p>Adam Phillips</p>
+							</td>
+						</tr>
+						<tr>
+							<td>10.00am - 12.00am</td>
+							<td></td>
+							<td>
+								<p>Cardio</p>
+								<p>John Deo</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Crossfit</p>
+								<p>Adam Phillips</p>
+							</td>
+							<td></td>
+							<td>
+								<p>Power Lifting</p>
+								<p>James Alien</p>
+							</td>
+							<td></td>
+						</tr>
 					</tbody>
 				</table>
 			</section>
