--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+		<link rel="stylesheet" href="./css/style.css" />
 		<title>Gym Website</title>
 	</head>
 	<body>
 		<main>
-			<section>
+			<section class="intro">
 				<header>
 					<a href="#">
-						<h1>Gymnast</h1>
+						<h1 class="page-title">gymNasT</h1>
 					</a>
 
 					<nav>
-						<a href="#">Home</a>
+						<a href="#" class="active">Home</a>
 						<a href="#">About Us</a>
 						<a href="#">Our Features</a>
-						<a href="#">Our Classes</a>
+						<a href="#">Classes</a>
 						<a href="#">Pages</a>
 						<a href="#">Contact</a>
 					</nav>
