--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 					</nav>
 				</header>
 
-				<section>
+				<section class="hero">
 					<h3>Gym & Fitness Center</h3>
 					<h2>Best Gym In Town</h2>
-					<a href="#">Join Us Now</a>
+					<a href="#" class="general-link style-white call-to-action"
+						>Join Us Now</a
+					>
 				</section>
 			</section>
 
