Complete Gains section

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 				</section>
 			</section>
 
-			<section>
-				<section>
+			<section class="gains">
+				<section class="gain-card gains-left">
 					<h3>Body Building</h3>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
@@ -49,10 +49,10 @@
 						iusto ea eligendi consequatur nihil, ullam omnis magni accusantium
 						dolores, ratione asperiores officia ducimus.
 					</p>
-					<a href="#">Join Now</a>
+					<a href="#" class="general-link style-white">Join Now</a>
 				</section>
 
-				<section>
+				<section class="gain-card gains-right">
 					<h3>Muscle Building</h3>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
@@ -60,7 +60,7 @@
 						iusto ea eligendi consequatur nihil, ullam omnis magni accusantium
 						dolores, ratione asperiores officia ducimus.
 					</p>
-					<a href="#">Join Now</a>
+					<a href="#" class="general-link style-white">Join Now</a>
 				</section>
 			</section>
 
