Complete experience section

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 				</section>
 			</section>
 
-			<section>
+			<section class="experience">
 				<img
 					src="./assets/images/experience.jpg"
 					alt="An image of two ladies and two gentlemen posing in a gym"
 				/>
 
-				<section>
+				<section class="experience-content">
 					<div>
 						<h2>10 Years Experience</h2>
 						<p>
@@ -96,8 +96,8 @@
 								Tempore!
 							</p>
 						</div>
-						<a href="#">Learn More</a>
 					</section>
+					<a href="#" class="general-link style-red">Learn More</a>
 				</section>
 			</section>
 
