Complete the website

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 				</section>
 			</section>
 
-			<section>
-				<h4>Class Timetable</h4>
-				<h4>Working Hours and Class Time</h4>
+			<section class="schedule">
+				<h4 class="title">Class Timetable</h4>
+				<h4 class="subtitle">Working Hours and Class Time</h4>
 
 				<ul>
-					<li>All Classes</li>
+					<li class="general-link highlighted">All Classes</li>
 					<li>Cardio</li>
 					<li>Crossfit</li>
 					<li>Powerlifting</li>
